--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA documentary</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="container">
@@ -13,14 +15,14 @@
           <div id="nav">
             <h3>Navigation</h3>
             <ul>
-              <li>Home</li>
-              <li>Project</li>
-              <li>About</li>
+              <li><a class="selected" href="">Home</a></li>
+              <li><a href="">Project</a></li>
+              <li><a href="">About</a></li>
             </ul>
           </div>
           <div id="main">
             <h2>Home page</h2>
-            <p>This is a home page.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
         <div id="footer">
