--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h3>Navigation</h3>
             <ul>
               <li><a class="selected" href="">Home</a></li>
-              <li><a href="">Project</a></li>
+              <li><a href="/project"="">Project</a></li>
               <li><a href="">About</a></li>
             </ul>
           </div>
