--- a/project.html
+++ b/project.html
@@ -5,9 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA documentary</title>
     <link rel="stylesheet" href="style.css">
-    <title></title>
   </head>
   <body>
+    <div id="container">
+        <div id="header">
+          <h1>My website</h1>
+        </div>
+        <div id="content">
+          <div id="nav">
+            <h3>Navigation</h3>
+            <ul>
+              <li><a class="selected" href="">Home</a></li>
+              <li><a href="/project"="">Project</a></li>
+              <li><a href="">About</a></li>
+            </ul>
+          </div>
+          <div id="main">
+            <h2>Home page</h2>
+            <<p>This is the project page.</p>
+        </div>
+        <div id="footer">
+          Copyright &copy; 2021 Le Yang.
+        </div>
 
+    </div>
   </body>
 </html>
