--- a/about.html
+++ b/about.html
@@ -15,14 +15,20 @@
           <div id="nav">
             <h3>Navigation</h3>
             <ul>
-              <li><a class="selected" href="">Home</a></li>
-              <li><a href="/project"="">Project</a></li>
-              <li><a href="">About</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="project.html">Project</a></li>
+              <li><a class="selected" href="">About</a></li>
             </ul>
           </div>
           <div id="main">
             <h2>Home page</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>I am a computer engineering student in Singapore Poly, I'm going to start my year 2 in SP this coming semester.
+            I have try alot of sports like ping pong, basketball, football, badminton, taekwondo
+            and so on but the the one that I really like is sleeping. HAHAHAHA </p>
+
+            <p>BTW if you want to know more about me or you have any question for me,
+            feel free to <a href="mailto:stevelimly@gmail.com"">email me</a>.
+            </p>
           </div>
         </div>
         <div id="footer">
