--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
   <body>
     <div id="container">
         <div id="header">
-          <h1>My website</h1>
+          <h1>Home</h1>
         </div>
         <div id="content">
           <div id="nav">
             <h3>Navigation</h3>
             <ul>
               <li><a class="selected" href="">Home</a></li>
-              <li><a href="/project"="">Project</a></li>
-              <li><a href="">About</a></li>
+              <li><a href="project.html">Project</a></li>
+              <li><a href="about.html">About</a></li>
             </ul>
           </div>
           <div id="main">
             <h2>Home page</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div style="padding:30px;">
+            <p>Hi guys, this is Steve aka Le Yang.<br><br>
+            This is the first webpage that I have build.<br>
+            At first I thinking of combining markdown with html css into my webpage so I try to use jekyll to build my webpage,
+            but then ended up facing alot of problem and spending most of the time setup the jekyll. Due to the due date of this
+            project, I have no choose but to use html and css by following the Jake Wright’s template.
+            I know this webpage seem not really nice but I will update it once I become more familiar with it 	&#128516;.<br><br>
+            Click on the navigations to know more about me.</p>
           </div>
         </div>
         <div id="footer">
