--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div id="footer">
-          Copyright &copy; 2021 Le Yang.
+          <h5>Copyright &copy; 2021 Le Yang.</h5>
         </div>
 
     </div>
