--- a/project.html
+++ b/project.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div id="footer">
-          Copyright &copy; 2021 Le Yang.
+          <h5>Copyright &copy; 2021 Le Yang.</h5>
         </div>
 
     </div>
