--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <body>
     <div id="container">
         <div id="header">
-          <h1>My website</h1>
+          <h1>About Me</h1>
         </div>
         <div id="content">
           <div id="nav">
