--- a/about.html
+++ b/about.html
@@ -5,36 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA documentary</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b592eb2b02.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   </head>
+
   <body>
     <div id="container">
-        <div id="header">
-          <h1>About Me</h1>
-        </div>
-        <div id="content">
-          <div id="nav">
-            <h3>Navigation</h3>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="project.html">Project</a></li>
-              <li><a class="selected" href="">About</a></li>
-            </ul>
-          </div>
-          <div id="main">
+      <div id="nav">
+        <a id="logo" href="index.html">EA Documentary</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Project</a></li>
+          <li><a class="selected" href="">About</a></li>
+        </ul>
+      </div>
+      <div id="social-links">
+          <a href="https://www.facebook.com/steve.limleyang" class="fab fa-facebook-f"></a>
+          <a href="https://www.instagram.com/steve.limm/" class="fab fa-instagram"></i>
+          <a href="https://twitter.com/steve_lly" class="fab fa-twitter"></a>
+      </div>
+      <div id="content">
             <h2>Home page</h2>
             <p>I am a computer engineering student in Singapore Poly, I'm going to start my year 2 in SP this coming semester.
             I have try alot of sports like ping pong, basketball, football, badminton, taekwondo
             and so on but the the one that I really like is sleeping. HAHAHAHA </p>
 
             <p>BTW if you want to know more about me or you have any question for me,
-            feel free to <a href="mailto:stevelimly@gmail.com"">email me</a>.
-            </p>
-          </div>
-        </div>
-        <div id="footer">
-          <h5>Copyright &copy; 2021 Le Yang.</h5>
-        </div>
-
+            feel free to <a href="mailto:stevelimly@gmail.com">email me </a>. </p>
+      </div>
     </div>
   </body>
 </html>
