--- a/index.html
+++ b/index.html
@@ -5,37 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA documentary</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b592eb2b02.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   </head>
+
   <body>
     <div id="container">
-        <div id="header">
-          <h1>Home</h1>
-        </div>
-        <div id="content">
-          <div id="nav">
-            <h3>Navigation</h3>
-            <ul>
-              <li><a class="selected" href="">Home</a></li>
-              <li><a href="project.html">Project</a></li>
-              <li><a href="about.html">About</a></li>
-            </ul>
-          </div>
-          <div id="main">
-            <h2>Home page</h2>
-            <div style="padding:20px;">
-            <p>Hi guys, this is Steve aka Le Yang.<br><br>
-            This is the first webpage that I have build.<br>
-            At first I thinking of combining markdown with html css into my webpage so I try to use jekyll to build my webpage,
-            but then ended up facing alot of problem and spending most of the time setup the jekyll. Due to the due date of this
-            project, I have no choose but to use html and css by following the Jake Wright’s template.
-            I know this webpage seem not really nice but I will update it once I become more familiar with it &#128516;.<br><br>
-            Click on the navigations to know more about me.</p>
-          </div>
-        </div>
-        <div id="footer">
-          <h5>Copyright &copy; 2021 Le Yang.</h5>
-        </div>
+      <div id="nav">
+        <a id="logo" href="index.html">EA Documentary</a>
+        <ul>
+          <li><a class="selected" href="">Home</a></li>
+          <li><a href="project.html">Project</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+      <div id="social-links">
+          <a href="https://www.facebook.com/steve.limleyang" class="fab fa-facebook-f"></a>
+          <a href="https://www.instagram.com/steve.limm/" class="fab fa-instagram"></i>
+          <a href="https://twitter.com/steve_lly" class="fab fa-twitter"></a>
+      </div>
+      <div id="content">
+        <h1>Hi guys, this is Steve <br>This is my EA Documentary webpage <br>
+        Hope you like it !</h1>
+        <p>Click on the navigations to know more about me.</p>
+      </div>
 
+      <img src="images/baili(crop).png" alt="baili" id="feature-image">
     </div>
   </body>
 </html>
