--- a/project.html
+++ b/project.html
@@ -5,57 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EA documentary</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/b592eb2b02.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
   </head>
+
   <body>
     <div id="container">
-        <div id="header">
-          <h1>My Project</h1>
-        </div>
-        <div id="content">
-          <div id="nav">
-            <h3>Navigation</h3>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a class="selected" href="">Project</a></li>
-              <li><a href="about.html">About</a></li>
-            </ul>
-          </div>
-          <div id="main">
-            <h3>29th & 30th March EA Training Camp</h3>
-            <p>What have I learned in this camp? Through this taining camp, I have learned how to how to create a website.
-              Want to learn how to make your own website? So this are the few steps.
-              First, you need to create a github account. Through this gihub, you can publish your own webpage in public
-              so that you can let others to look at what you have create.</p>
+      <div id="nav">
+        <a id="logo" href="index.html">EA Documentary</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a class="selected" href="">Project</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </div>
+      <div id="social-links">
+          <a href="https://www.facebook.com/steve.limleyang" class="fab fa-facebook-f"></a>
+          <a href="https://www.instagram.com/steve.limm/" class="fab fa-instagram"></i>
+          <a href="https://twitter.com/steve_lly" class="fab fa-twitter"></a>
+      </div>
+      <div id="content">
+        <h3>29th & 30th March EA Training Camp</h3>
+        <p>What have I learned in this camp? Through this taining camp, I have learned how to how to create a website.
+          Want to learn how to make your own website? So this are the few steps.
+          First, you need to create a github account. Through this gihub, you can publish your own webpage in public
+          so that you can let others to look at what you have create.</p>
 
-            <p>Step 1</p><img src="images/githubprofile.jpg" alt="github profile" width="400" height="250">
+        <p>Step 1</p><img src="images/githubprofile.jpg" alt="github profile" width="400" height="250">
 
-            <p>Picture above is the example Github account profile you will see now. Then you have to create a repository in your github.
-            Just follow the few steps below.</p>
+        <p>Picture above is the example Github account profile you will see now. Then you have to create a repository in your github.
+          Just follow the few steps below.</p>
 
-            <p>Step 2</p><img src="images/githubrepo.jpg" alt="create github repositories" width="500" height="350">
-            <p>Step 3</p><img src="images/githubrepo2.jpg" alt="create github repositories step 2" width="500" height="350">
-            <p>Step 4</p><img src="images/githubrepo3.jpg" alt="create url for your github repositories" width="500" height="350">
-            <p>Step 5</p><img src="images/yourweb.jpg" alt="search for your webpage" width="500" height="350">
+        <p>Step 2</p><img src="images/githubrepo.jpg" alt="create github repositories" width="500" height="350">
+        <p>Step 3</p><img src="images/githubrepo2.jpg" alt="create github repositories step 2" width="500" height="350">
+        <p>Step 4</p><img src="images/githubrepo3.jpg" alt="create url for your github repositories" width="500" height="350">
+        <p>Step 5</p><img src="images/yourweb.jpg" alt="search for your webpage" width="500" height="350">
+        <p>Now you will able to see your own page as a website.
+          Next you just have to learn HTML to defines your contain and CSS to defines your layout.
+          You might wonder how to link your online repositories with your own Text Editor.
+          Well you can use Github desktop to clone yoour repositories to your local desktop.
+          Download Github desktop and sign in with your github account. Then from your github profile online,
+          you will able to clone your repository and make changes with your text editor.</p>
 
-            <p>Now you will able to see your own page as a website.
-              Next you just have to learn HTML to defines your contain and CSS to defines your layout.
-              You might wonder how to link your online repositories with your own Text Editor.
-              Well you can use Github desktop to clone yoour repositories to your local desktop.
-              Download Github desktop and sign in with your github account. Then from your github profile online,
-              you will able to clone your repository and make changes with your text editor.</p>
+        <img src="images/githubclone.jpg" alt="clone your github repositories" width="400" height="250">
 
-            <img src="images/githubclone.jpg" alt="clone your github repositories" width="400" height="250">
+        <p>After you have clone your repositories, it will create a file in your local file explorer.
+          Then you can open it with your text editor and start coding. After you save your work in your text editor,
+          just went back your github desktop and push it to the origin.</p>
 
-            <p>After you have clone your repositories, it will create a file in your local file explorer.
-            Then you can open it with your text editor and start coding. After you save your work in your text editor,
-            just went back your github desktop and push it to the origin.</p>
-
-          </div>
-        </div>
-        <div id="footer">
-          <h5>Copyright &copy; 2021 Le Yang.</h5>
-        </div>
-
+      </div>
     </div>
   </body>
 </html>
